One of last commits
- dodano kontrolę logowania
- dodano widoki użytkownika i admina
-wiele innych poprawek

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,6 +15,43 @@
 	    <param-name>primefaces.FONT_AWESOME</param-name>
 	    <param-value>true</param-value>
 	</context-param>
+	
+	<filter>
+		<filter-name>SecurityFilter</filter-name>
+		<filter-class>javax.faces.simplesecurity.SecurityFilter</filter-class>
+		<init-param>
+			<param-name>noPermitionPage</param-name>
+			<param-value>/public/login.xhtml</param-value>
+		</init-param>
+		<init-param>
+		<param-name>permissions</param-name>
+			<param-value>
+				/javax.faces.resource : PUBLIC;
+				/public: PUBLIC;
+				/pages : root;
+				/pages/adminPages : root;
+				/pages/userPages : user;
+				
+		</param-value>
+		</init-param>
+		<init-param>
+			<param-name>invalidateOnRemoteAddressChange</param-name>
+			<param-value>true</param-value>
+		</init-param>
+		<init-param>
+			<param-name>invalidateOnRemoteHostChange</param-name>
+			<param-value>false</param-value>
+		</init-param>
+		<init-param>
+			<param-name>invalidateOnRemotePortChange</param-name>
+			<param-value>false</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>SecurityFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	
 	<context-param>
 		<param-name>primefaces.THEME</param-name>
 		<param-value>luna-pink</param-value>
@@ -29,10 +66,10 @@
 		<url-pattern>*.jsf</url-pattern>
 	</servlet-mapping>
 	<welcome-file-list>
-		<welcome-file>index.jsf</welcome-file>
+		<welcome-file>/public/index.xhtml</welcome-file>
 	</welcome-file-list>
 	<error-page>
 		<exception-type>javax.faces.application.ViewExpiredException</exception-type>
-		<location>/personList.xhtml</location>
+		<location>/index.xhtml</location>
 	</error-page>
 </web-app>
